    has been returning the documentation only as HTML.

  * Updated the default URLs, and URLs in documentation, to the new
    "daylight.luminoso.com".  Also added code in token authentication in both
    v4 and v5 clients to look for tokens for a domain with "analytics" in it
    if a domain with "daylight" was specified but no token was found, to help
    users transition to the new URLs.

Version 1.1.1 (2019-02-22)

  * Added connect_with_username_and_password() to the v5 client to ease the
    transition from v4 to v5.

Version 1.1 (2019-01-28)

  * Client changes

    - The commands `lumi-upload` and `lumi-download` now use the v5 API.
      You can upload a JSON-lines file (a file in which each line is a JSON
      document) as a Luminoso v5 project, and download the resulting project
      in the same form.

  * Small documentation fixes

  * Added change_path() to the v5 client as a deprecated alias for
    client_for_path(), analogous to the upload() alias.

Version 1.0.1 (2018-08-31)

  * Minor change to turn the README.md into the documentation that appears on
    PyPI.

Version 1.0 (2018-08-21)

  * Client overhaul to interface with the v5 API.

    - A client for the v4 API is still available, and is the default client,
      but there is a sunset period for the v4 API.

Version 0.5.3 (2017-02-17)

  * Client changes

    - Remove transition code associated with the legacy
      https://api.luminoso.com/v4 URL; all Luminoso Analytics installations now
      serve their API under /api/v4.

Version 0.5.2 (2016-12-02)

  * Client changes

    - Fix an issue with password prompts on Windows under Python 2

Version 0.5.1 (2016-04-03)

  * Upload script changes

    - Fix a bug that resulted in --language being required.

Version 0.5 (2016-01-09)

These changes correlate with moving the API from https://api.luminoso.com/v4
to https://analytics.luminoso.com/api/v4.

  * Client changes

    - Documentation updated with new URL.