@@ -133,7 +133,9 @@ def _main(argv):
         LuminosoClient.save_token(args.token,
                                   domain=urlparse(args.base_url).netloc)
 
-    client = LuminosoClient.connect(url=args.base_url, token=args.token)
+    client = LuminosoClient.connect(
+        url=args.base_url, token=args.token, user_agent_suffix='lumi-download'
+    )
     proj_client = client.client_for_path('projects/{}'.format(args.project_id))
     download_docs(proj_client, args.output_file, args.expanded)
 
