@@ -1,0 +1,2 @@
+# Remember to change both this and the version in setup.py!
+VERSION = '2.0'
